added tab bar styling

--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -104,8 +104,21 @@
 }
 
 // Dashboard Content /////////////////////////////////////////////////////
-.dash_sidebar {
-  width: 45px;
-  height: 100%;
-  background-color: $main-darkblue;
+.dash_content {
+  display: block;
+  height: auto;
+  
+  .dash_sidebar {
+    width: 45px;
+    height: 100%;
+    background-color: $main-darkblue;
+  }
+
+  .dash_tabs {
+    height: 45px;
+    width: calc(100% - 45px);
+    background-color: white;
+    @include navbar-shadow;
+    float: right;
+  }
 }
