profile information styles

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -4,8 +4,13 @@ $accent-green: #0F9D58;
 $main-darkgray: $dark-gray;
 $main-darkblue: $dark-blue;
 
+$padding-amount: 30px;
+$buttonlike-padding: 5px 15px;
+
 $letter-space: .5px;
-$h1-fontsize: 22px;
-$h2-fontsize: 16px;
-$h3-fontsize: 14px;
-$p-fontsize: 12px;
+$display-lineheight: 2rem;
+$title-fontsize: 36px;
+$h1-fontsize: 24px;
+$h2-fontsize: 18px;
+$h3-fontsize: 16px;
+$p-fontsize: 14px;
