added icons to sidebar

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,11 +1,17 @@
 $dark-gray: #2F2F2F;
 $dark-blue: #1D2126;
 $accent-green: #0F9D58;
+$accent-lightblue: #2294E3;
 $main-darkgray: $dark-gray;
 $main-darkblue: $dark-blue;
 
 $padding-amount: 30px;
+$margin-size: 30px;
+$navbar-height: 45px;
+$sidebar-width: 55px;
 $buttonlike-padding: 5px 15px;
+
+$border-radius: 8px;
 
 $letter-space: .5px;
 $display-lineheight: 2rem;
@@ -14,3 +20,5 @@ $h1-fontsize: 24px;
 $h2-fontsize: 18px;
 $h3-fontsize: 16px;
 $p-fontsize: 14px;
+
+$cover-height: 450px;
