--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -16,13 +16,26 @@
   text-align: center;
   vertical-align: middle;
 
+  position: fixed !important;
+}
+
+.session-button {
+  border-radius: $border-radius;
+  background-color: $accent-lightblue;
+  color: white;
   position: fixed;
+  top: 11px;
+  right: 11px;
+  z-index: 10000;
+  padding: $buttonlike-padding;
+  font-size: $p-fontsize;
+  cursor: pointer;
 }
 
 // Dashboard Cover ///////////////////////////////////////////////////////
 .dash_cover {
   position: relative;
-  height: 450px;
+  height: calc(#{$cover-height} + #{$navbar-height});
   width: 100%;
   background-color: $main-darkblue;
   background-attachment: fixed !important;
@@ -43,8 +56,8 @@
       position: absolute;
       top: 0;
       right: 0;
-      margin-top: 30px;
-      margin-right: 30px;
+      margin-top: calc(#{$margin-size} + #{$navbar-height});
+      margin-right: $margin-size;
 
       .followers,
       .hacker-points {
@@ -56,7 +69,7 @@
 
       .hacker-points {
         background-color: $accent-green;
-        @include border-radius;
+        border-radius: $border-radius;
       }
 
       .followers::after {
@@ -78,7 +91,7 @@
       .personal-info {
         line-height: $display-lineheight;
         position: relative;
-        top: 0;
+        top: $navbar-height;
 
         .personal-name {
           @include roboto-font(500);
@@ -113,9 +126,17 @@
 
   .dash-sidebar {
     display: table-cell;
-    width: 45px;
+    width: $sidebar-width;
     height: 100%;
     background-color: $main-darkblue;
+
+    .sidebar-button {
+      height: $sidebar-width;
+      width: $sidebar-width;
+      position: relative;
+      display: table;
+      cursor: pointer;
+    }
   }
 
   .tab-content {
@@ -128,7 +149,7 @@
         font-size: $title-fontsize;
         color: $accent-green;
         @include roboto-font(700);
-        margin-bottom: 30px;
+        margin-bottom: $margin-size;
 
         .profile-hp,
         .profile-ranking {
