created unique sessions with framework

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -5,6 +5,8 @@ $accent-lightblue: #2294E3;
 $main-darkgray: $dark-gray;
 $main-darkblue: $dark-blue;
 
+$border-gray: #95989A;
+
 $padding-amount: 30px;
 $margin-size: 30px;
 $navbar-height: 45px;
