--- a/client/styles/navbar.scss
+++ b/client/styles/navbar.scss
@@ -1,20 +1,22 @@
 @import "_variables";
 @import "_mixins";
 
-.navbar {
+.dash_navbar,
+.sesh_navbar {
   height: $navbar-height;
   width: 100%;
-
   @include navbar-shadow;
-
-  // color: white;
-  // text-transform: uppercase;
-  // font-size: 16px;
   line-height: $navbar-height;
   text-align: center;
   vertical-align: middle;
+}
 
+.dash_navbar {
   position: fixed !important;
+}
+
+.sesh_navbar {
+  position: relative !important;
 }
 
 .session-button {
