--- a/client/styles/session.scss
+++ b/client/styles/session.scss
@@ -11,15 +11,16 @@
 .sesh-col {
   display: table-cell;
   outline: 1px solid $border-gray;
-  height: 100%;
+  height: calc(100% - #{$navbar-height});
   width: calc(50% - 50px);
+  overflow: hidden;
 }
 
 .sesh-editor,
 .sesh-compiler,
 .sesh-video,
 .sesh-chat {
-  height: 50vh;
+  height: calc((100vh - #{$navbar-height}) / 2);
   outline: 1px solid $border-gray;
 }
 
