--- a/client/styles/session.editor.scss
+++ b/client/styles/session.editor.scss
@@ -5,42 +5,42 @@
   width: 100%;
   height: 100%;
   position: relative;
-}
 
-.editor {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
+  .editor {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
 
-.editor-dropdown {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  padding: 0;
-  margin: 0;
-  border: 1px solid #ccc;
-  width: 120px;
-  border-radius: 3px;
-  overflow: hidden;
-  background-color: transparent;
-  border: 1px solid gray;
-  z-index: 100;
-  color: gray;
-}
-
-.editor-dropdown select {
-    padding: 5px 8px;
-    width: 130%;
-    border: none;
-    box-shadow: none;
+  .editor-dropdown {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ccc;
+    width: 120px;
+    border-radius: 3px;
+    overflow: hidden;
     background-color: transparent;
-    background-image: none;
-    -webkit-appearance: none;
-       -moz-appearance: none;
-            appearance: none;
-}
+    border: 1px solid gray;
+    z-index: 100;
+    color: gray;
 
-.editor-dropdown select:focus {
-    outline: none;
+    select {
+      padding: 5px 8px;
+      width: 130%;
+      border: none;
+      box-shadow: none;
+      background-color: transparent;
+      background-image: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
+    }
+
+    select:focus {
+      outline: none;
+    }
+  }
 }
