--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Raleway:400,600,700,900|Roboto:300,400,400i,500,700');
+@import url('https://fonts.googleapis.com/css?family=Inconsolata|Source+Code+Pro|Ubuntu+Mono');
+
+@mixin code-font() {
+  font-family: 'Inconsolata', 'Ubuntu Mono', 'Source Code Pro', monospace;
+}
 
 @mixin roboto-font($weight) {
   font-family: 'Roboto', 'Lato', 'Helvetica', 'Arial', sans-serif;
