--- a/client/styles/session.editor.scss
+++ b/client/styles/session.editor.scss
@@ -10,7 +10,7 @@
   .editor {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
   }
 
   .editor-dropdown {
@@ -24,7 +24,7 @@
     border-radius: 3px;
     overflow: hidden;
     background-color: transparent;
-    border: 1px solid gray;
+    border: .5px solid $main-darkgray;
     z-index: 100;
     color: gray;
 
@@ -50,5 +50,21 @@
 .compiler-container {
   width: 100%;
   height: 100%;
-  background: $main-darkblue;
+  position: relative;
+
+  .compiler {
+    width: 100%;
+    height: 100%;
+    background: $main-darkblue;
+    padding: $padding-amount;
+    position: absolute;
+    color: white;
+  }
+
+  .compile-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    @include basic-button-style;
+  }
 }
