--- a/client/styles/session.scss
+++ b/client/styles/session.scss
@@ -4,24 +4,24 @@
 .sesh-container {
   display: table;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.sesh-col {
-  display: table-cell;
-  outline: 1px solid $border-gray;
   height: calc(100% - #{$navbar-height});
-  width: calc(50% - 50px);
   overflow: hidden;
-}
 
-.sesh-editor,
-.sesh-compiler,
-.sesh-video,
-.sesh-chat {
-  height: calc((100vh - #{$navbar-height}) / 2);
-  outline: 1px solid $border-gray;
+  .sesh-col {
+    display: table-cell;
+    outline: 1px solid $border-gray;
+    height: calc(100% - #{$navbar-height});
+    width: calc(50% - 50px);
+    overflow: hidden;
+
+    .sesh-editor,
+    .sesh-compiler,
+    .sesh-video,
+    .sesh-chat {
+      height: calc((100vh - #{$navbar-height}) / 2);
+      outline: 1px solid $border-gray;
+    }
+  }
 }
 
 .sesh-video-sidebar {
