basic chat box formatting

--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -15,6 +15,12 @@
   font-weight: $weight;
 }
 
+@mixin chat-input-shadow {
+  -webkit-box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.10);
+  -moz-box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.10);
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.10);
+}
+
 @mixin navbar-shadow {
   -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
