--- a/client/styles/session.chat.scss
+++ b/client/styles/session.chat.scss
@@ -25,8 +25,19 @@
 
     .reply-input {
       float: right;
-      width: calc(100% - 50px);
-      padding: 10px;
+      width: calc(100% - #{$navbar-height});
+      height: 100%;
+
+      input, textarea {
+        @include roboto-font(400);
+        font-size: $p-fontsize;
+        vertical-align: middle;
+        width: calc(100% - 30px);
+        height: calc(100% - 30px);
+        padding: 15px;
+        border: 0;
+        outline: 0;
+      }
     }
   }
 }
