compiler scrolls with data

--- a/client/styles/session.editor.scss
+++ b/client/styles/session.editor.scss
@@ -60,6 +60,10 @@
     position: absolute;
     color: white;
     overflow-y: auto;
+
+    .out {
+      padding-bottom: 50px;
+    }
   }
 
   .compile-button {
