--- a/client/styles/session.video.scss
+++ b/client/styles/session.video.scss
@@ -14,10 +14,13 @@
   .error-message,
   .video {
     position: absolute;
+    width: 100%;
+    height: 100%;
     top: 0;
-    left: 0;
+    left: 50%;
     right: 0;
     bottom: 0;
+    transform: translateX(-50%);
   }
 
   .error-message {
