--- a/client/styles/session.video.scss
+++ b/client/styles/session.video.scss
@@ -4,14 +4,13 @@
 .video-container {
   width: 100%;
   height: 100%;
-  background: $main-darkblue;
+  // background: $main-darkblue;
+  background: black;
   position: relative;
 
   .video-buttons {
       position: absolute;
   }
-
-  .error-message,
   .video {
     position: absolute;
     width: 100%;
@@ -24,6 +23,11 @@
   }
 
   .error-message {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     padding: $padding-amount;
     color: white;
   }
