--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,9 +1,11 @@
 $light-gray: #F8F8F8;
 $medium-gray: #A0A0A0;
+$font-gray: #95989A;
 $dark-gray: #2F2F2F;
 $dark-blue: #1D2126;
 $accent-green: #0F9D58;
 $accent-lightblue: #2294E3;
+$accent-red: #DB4437;
 $main-darkgray: $dark-gray;
 $main-darkblue: $dark-blue;
 
@@ -14,15 +16,20 @@ $margin-size: 30px;
 $navbar-height: 45px;
 $sidebar-width: 55px;
 $buttonlike-padding: 5px 15px;
+$message-width: 70%;
+$message-width-dec: .70;
+$chatbar-width: 5px;
 
 $border-radius: 8px;
 
 $letter-space: .5px;
+$chat-lineheight: 1.2rem;
 $display-lineheight: 2rem;
 $title-fontsize: 36px;
 $h1-fontsize: 24px;
 $h2-fontsize: 18px;
 $h3-fontsize: 16px;
 $p-fontsize: 14px;
+$small-fontsize: 12px;
 
 $cover-height: 450px;
