added loading spinner to compiler

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,5 +1,5 @@
 $light-gray: #F8F8F8;
-$medium-gray: #A0A0A0;
+$medium-gray: gray;
 $font-gray: #95989A;
 $dark-gray: #2F2F2F;
 $dark-blue: #1D2126;
