--- a/client/styles/session.editor.scss
+++ b/client/styles/session.editor.scss
@@ -66,10 +66,22 @@
     }
   }
 
-  .compile-button {
+  .compile-options {
     position: absolute;
     top: 10px;
     right: 10px;
-    @include basic-button-style;
+
+    .loading-spinner {
+      padding: 5px;
+      margin-right: 10px;
+      display: inline-block;
+      position: relative;
+    }
+
+    .compile-button {
+      @include basic-button-style;
+      display: inline-block;
+      position: relative;
+    }
   }
 }
