styled video sidebar

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -19,6 +19,7 @@ $buttonlike-padding: 5px 15px;
 $message-width: 70%;
 $message-width-dec: .70;
 $chatbar-width: 5px;
+$video-sidebar-width: 100px;
 
 $border-radius: 8px;
 
