--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -47,3 +47,17 @@
   -moz-box-shadow: $horizontal $vertical $blur $spread $color;
   box-shadow: $horizontal $vertical $blur $spread $color;
 }
+
+@mixin absolute-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+}
+
+@mixin background-picture-attachment {
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+}
