--- a/client/styles/session.video.scss
+++ b/client/styles/session.video.scss
@@ -4,9 +4,9 @@
 .video-container {
   width: 100%;
   height: 100%;
-  // background: $main-darkblue;
   background: black;
   position: relative;
+  overflow: hidden;
 
   .video-buttons {
       position: absolute;
@@ -30,5 +30,32 @@
     bottom: 0;
     padding: $padding-amount;
     color: white;
+  }
+
+  .sesh-video-sidebar {
+    display: table-column;
+    width: $video-sidebar-width;
+    background-color: $main-darkgray;
+    position: fixed;
+    right: 0;
+    height: 100%;
+    z-index: 100;
+    overflow: hidden;
+
+    .video-thumbnail {
+      display: block;
+      width: 100%;
+      height: 75px;
+      position: relative;
+
+      .video-user-picture {
+        display: block;
+        border-radius: 50%;
+        height: 50px;
+        width: 50px;
+        @include absolute-center;
+        @include background-picture-attachment;
+      }
+    }
   }
 }
