added ability to switch video thumbnails on the sidebar

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -6,6 +6,7 @@ $dark-blue: #1D2126;
 $accent-green: #0F9D58;
 $accent-lightblue: #2294E3;
 $accent-red: #DB4437;
+$accent-yellow: #F4C20D;
 $main-darkgray: $dark-gray;
 $main-darkblue: $dark-blue;
 
