login box added to session

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -17,6 +17,9 @@ $margin-size: 30px;
 $navbar-height: 45px;
 $sidebar-width: 55px;
 $buttonlike-padding: 5px 15px;
+$input-padding: 10px;
+$input-margin: 10px 0;
+$input-radius: 3px;
 $message-width: 70%;
 $message-width-dec: .70;
 $chatbar-width: 5px;
