--- a/client/styles/_mixins.scss
+++ b/client/styles/_mixins.scss
@@ -57,6 +57,15 @@
   -moz-transform: translate(-50%, -50%);
 }
 
+@mixin relative-center {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+}
+
 @mixin background-picture-attachment {
   background-repeat: no-repeat !important;
   background-size: cover !important;
