login works immediately now

--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -1,6 +1,10 @@
 @import "_variables";
 @import "_mixins";
 
+.container {
+  position: absolute;
+}
+
 // Dashboard Cover ///////////////////////////////////////////////////////
 .dash_cover {
   position: relative;
