--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,.9);
+  background: $main-darkblue;
   z-index: 10000;
 
   .login-form {
