basic chats work, need to refresh to add new user

--- a/client/styles/session.chat.scss
+++ b/client/styles/session.chat.scss
@@ -93,6 +93,7 @@ textarea::-webkit-scrollbar-thumb {
 
       .message-bubble {
         display: inline-block;
+        min-height: $navbar-height;
 
         .message-bar {
           width: $navbar-height;
