--- a/client/styles/session.video.scss
+++ b/client/styles/session.video.scss
@@ -5,6 +5,7 @@
   height: 100%;
   width: 100%;
   display: flex;
+  @include navbar-shadow;
 
   .video-container {
     width: 100%;
@@ -78,5 +79,4 @@
       }
     }
   }
-
 }
