fixed user video focus, muting is still a probelm

--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -3,6 +3,7 @@
 
 .container {
   position: absolute;
+  width: 100%;
 }
 
 // Dashboard Cover ///////////////////////////////////////////////////////
