sessions logged to recent sessions tab

--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -167,3 +167,13 @@
     }
   }
 }
+
+tr {
+  color: $font-gray !important;
+  cursor: pointer;
+}
+
+td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
