fixed recent session display, new time for session creation

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -15,6 +15,7 @@ $border-gray: #95989A;
 $padding-amount: 30px;
 $margin-size: 30px;
 $navbar-height: 45px;
+$tabbar-height: 48px;
 $sidebar-width: 55px;
 $buttonlike-padding: 5px 15px;
 $input-padding: 10px;
