removed hackercred styling and replaced with hackerpad

--- a/client/styles/dashboard.scss
+++ b/client/styles/dashboard.scss
@@ -6,6 +6,9 @@
   width: 100%;
 }
 
+.tabs {
+  overflow: inherit;
+}
 // Dashboard Cover ///////////////////////////////////////////////////////
 .dash_cover {
   position: relative;
